2006-11-24  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.Metadata/MetadataToken.cs:
		Add a FromToken factory method to get a MetadataToken
		from an integer token.

2006-11-22  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.Cil/GuidAttribute.cs:
		Fix for CF compilation.

2006-11-16  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/StructureReader.cs:
		If an assembly has no managed assembly defined,
		consider it as a dll.

2006-11-08  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/BaseAssemblyResolver.cs:
		Handles different kind of GAC on Windows.

2006-11-07  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/ReflectionHelper.cs:
		Don't import the flags of an assembly name reference.

2006-11-03  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/PropertyDefinition.cs:
		Fix property cloning.
		Patch by Alex Prudkiy <prudkiy@mail.ru>

2006-10-26  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/ReflectionReader.cs:
		Use the proper generic context when reading memberrefs.

2006-10-11  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.Cil/Document.cs:
		Complete a little bit.

	* Mono.Cecil/SecurityDeclarationReader.cs:
		Get rid of a lot of exceptions when creating the security
		attribute.

2006-10-10  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/ReflectionReader.cs:
	  Mono.Cecil/CustomAttribute.cs:
	  Mono.Cecil.Signatures/SignatureReader.cs:
	  Mono.Cecil/SecurityDeclarationReader.cs:
		Patch from: Eyal Alaluf  <eyala@mainsoft.com>.
		Add support for resolving custom attributes that contain references
		to enum in other assemblies.

2006-10-09  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/IRequireResolving.cs
	  Mono.Cecil/CustomAttribute.cs
	  Mono.Cecil/SecurityDeclaration.cs
	  Mono.Cecil/SecurityDeclarationReader.cs
	  Mono.Cecil/AggressiveReflectionReader.cs
	  Mono.Cecil/ReflectionWriter.cs
	  Mono.Cecil/ModuleDefinition.cs:
		Introduce the interface IRequireResolving implemented
		by CustomAttribute and SecurityDeclaration for when they can't